# tauri-plugin-rusqlite

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
.changes/: change.md  config.json  initial-release.md  readme.md
.github/workflows/: covector-version-or-publish.yml
examples/rusqlite-demo/: package.json  vite.config.ts
examples/rusqlite-demo/src/: App.tsx  Database.ts  styles.css
examples/rusqlite-demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/rusqlite-demo/src-tauri/src/: main.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
src/: common.rs  error.rs  lib.rs  types.rs
src/commands/: batch.rs  migration.rs  mod.rs  select.rs  update.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
