[package]
name = "tauri-plugin-rusqlite"
version = "0.4.2"
authors = [ "Kess" ]
description = "Tauri Plugin based on Rusqlite"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.60"
exclude = [ "/examples", "/webview-dist", "/webview-src", "node_modules" ]

[dependencies]
tauri = { version = "1.5.4" }
serde = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31.0", features = [ "bundled" ] }
serde_json = "1.0.114"
md5 = "0.7.0"
